Checked Sonarqube errors